# net-ops

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  start_all.ps1  start_fastapi.ps1  stop_all.ps1
.github/workflows/: ci.yml
.runtime/test/: django-restart.ps1  fastapi-restart.ps1  pids.json
app/config/: settings.py
deployment/: Dockerfile.django  Dockerfile.fastapi  Dockerfile.react  Makefile  docker-compose.middleware.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  nginx.production.conf.example
docker/langfuse/: docker-compose.yml
docker/minio/: docker-compose.yml
docs/: 01_系统架构设计.md  02_概要与详细设计.md  03_数据库设计 & 数据字典.md  04_API 接口文档.md  05_编码 & 工程规范.md  06_环境 & 编译构建说明.md  07_系统配置说明.md  08_日志规范 & 日志字典.md  09_错误码定义文档.md  10_部署安装手册.md  11_运维技术手册 & 故障排查.md  12_Supervisor路由与Skill执行流程.md  13_生产上线清单.md  API文档.md  DEPLOYMENT.md  README.md  SKILL_CREATION_GUIDE.md  auth-rbac-plan.md  langfuse-sse-plan.md  logging-handbook.md  patrol-change-event-pipeline.md  storage-minio-plan.md  textfsm-generator-guide.md  关闭手册.md  启动手册.md  测试手册.md  程序操作手册.md
docs/adr/: 001-skill-system-architecture.md  002-progressive-disclosure.md  003-llm-based-routing.md  004-production-hardening.md  005-django-react-architecture.md  006-docker-compose-orchestration.md  007-generic-workflow-context.md
knowledge_base/: Linux系统运维常用命令_SOP.md  交换机端口Down故障处理_SOP.md  通用网络运维_SOP.md  防火墙运维与排障_SOP.md
knowledge_base/manuals/: 华为_CE12800_基础配置.md
knowledge_base/sops/: 交换机端口Down_SOP.md
schemas/: domain-event-v1.json  skill-execution-result-v1.json
scripts/: README.md  _parse_test.ps1  add_license_headers.py  create_skill.py  init_db.py  prepare-pingfang-webfont.ps1  validate_ps1.ps1  validate_skill.py
scripts/prod/: README.md  backup.ps1  backup.sh  check_env.ps1  check_env.sh  install.ps1  install.sh  smoke_test.ps1  smoke_test.sh  start.ps1  start.sh  stop.ps1  stop.sh
scripts/test/: _port_utils.ps1  celery_worker.ps1  e2e_itsm_workflow.py  e2e_supervisor_v2.ps1  install.ps1  start.ps1  stop.ps1  verify.ps1
src/auth/: __init__.py  dependencies.py  models.py  rbac.py  security.py  token_store.py
src/common/: config.py  exceptions.py  logger.py  metrics.py  retry.py  ticket_utils.py  tracing.py
src/core/: exceptions.py  logging.py
tests/: __init__.py
tools/: init_test_db.py  netops_agent_tools.py
web/: README.md  streamlit_app.py
(+434 files in other folders)
